adds messages section to website

--- a/package.json
+++ b/package.json
@@ -20,8 +20,12 @@
   },
   "homepage": "https://github.com/ilovevinylrecs/andynystrom#readme",
   "dependencies": {
+    "date-fns": "^2.16.1",
+    "gray-matter": "^4.0.2",
     "next": "^9.5.5",
     "react": "^16.14.0",
-    "react-dom": "^16.14.0"
+    "react-dom": "^16.14.0",
+    "remark": "^13.0.0",
+    "remark-html": "^13.0.1"
   }
 }
