--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   },
   "homepage": "https://github.com/ilovevinylrecs/andynystrom#readme",
   "dependencies": {
+    "contentful": "^7.14.8",
     "date-fns": "^2.16.1",
     "gray-matter": "^4.0.2",
     "next": "^9.5.5",
