--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
   "dependencies": {
     "contentful": "^7.14.8",
     "date-fns": "^2.16.1",
+    "discogs": "^0.4.4",
+    "disconnect": "^1.2.1",
     "gray-matter": "^4.0.2",
     "next": "^9.5.5",
     "react": "^16.14.0",
