--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
   },
   "homepage": "https://github.com/ilovevinylrecs/andynystrom#readme",
   "dependencies": {
-    "contentful": "^7.14.8",
+    "@contentful/rich-text-html-renderer": "^14.1.2",
+    "contentful": "^7.14.14",
     "date-fns": "^2.16.1",
     "discogs": "^0.4.4",
     "disconnect": "^1.2.1",
