--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   "homepage": "https://github.com/ilovevinylrecs/andynystrom#readme",
   "dependencies": {
     "@contentful/rich-text-html-renderer": "^14.1.2",
+    "@contentful/rich-text-react-renderer": "^14.1.2",
     "contentful": "^7.14.14",
     "date-fns": "^2.16.1",
     "discogs": "^0.4.4",
