--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   "dependencies": {
     "@contentful/rich-text-html-renderer": "^14.1.2",
     "@contentful/rich-text-react-renderer": "^14.1.2",
+    "bootstrap": "^4.5.3",
     "contentful": "^7.14.14",
     "dangerously-set-html-content": "^1.0.8",
     "date-fns": "^2.16.1",
@@ -31,7 +32,10 @@
     "next": "^9.5.5",
     "react": "^16.14.0",
     "react-dom": "^16.14.0",
+    "reactstrap": "^8.7.1",
     "remark": "^13.0.0",
-    "remark-html": "^13.0.1"
+    "remark-html": "^13.0.1",
+    "styled-components": "^5.2.1",
+    "use-dark-mode": "^2.3.1"
   }
 }
