adds fade in to vinyl page

--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "next": "^9.5.5",
     "react": "^16.14.0",
     "react-dom": "^16.14.0",
+    "react-fade-in": "^1.1.1",
     "reactstrap": "^8.7.1",
     "remark": "^13.0.0",
     "remark-html": "^13.0.1",
