--- a/package.json
+++ b/package.json
@@ -30,9 +30,13 @@
     "disconnect": "^1.2.1",
     "gray-matter": "^4.0.2",
     "next": "^9.5.5",
+    "next-images": "^1.7.0",
     "react": "^16.14.0",
+    "react-device-detect": "^1.15.0",
     "react-dom": "^16.14.0",
     "react-fade-in": "^1.1.1",
+    "react-modal": "^3.12.1",
+    "react-use": "^17.1.1",
     "reactstrap": "^8.7.1",
     "remark": "^13.0.0",
     "remark-html": "^13.0.1",
