--- a/package.json
+++ b/package.json
@@ -42,5 +42,10 @@
     "remark-html": "^13.0.1",
     "styled-components": "^5.2.1",
     "use-dark-mode": "^2.3.1"
+  },
+  "devDependencies": {
+    "@types/node": "^14.14.37",
+    "@types/react": "^17.0.3",
+    "typescript": "^4.2.3"
   }
 }
