--- a/tsconfig.json
+++ b/tsconfig.json
@@ -23,7 +23,7 @@
     "**/*.ts",
     "**/*.tsx",
     "pages/_app.tsx"
-  ],
+, "pages/api/messages/[id].js"  ],
   "exclude": [
     "node_modules"
   ]
