--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   "dependencies": {
     "@contentful/rich-text-html-renderer": "^14.1.2",
     "@contentful/rich-text-react-renderer": "^14.1.2",
+    "@fortawesome/fontawesome-free": "^5.15.3",
     "bootstrap": "^4.5.3",
     "contentful": "^7.14.14",
     "dangerously-set-html-content": "^1.0.8",
