--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,7 +15,7 @@
     "module": "esnext",
     "moduleResolution": "node",
     "resolveJsonModule": true,
-    "isolatedModules": false,
+    "isolatedModules": true,
     "jsx": "preserve"
   },
   "include": [
@@ -23,8 +23,8 @@
     "**/*.ts",
     "**/*.tsx",
     "pages/_app.tsx"
-, "pages/api/messages/[id].js", "collection-export/collection-export.mjs"  ],
+, "pages/api/messages/[id].js"],
   "exclude": [
     "node_modules"
   ]
-}
+} 
