--- a/package.json
+++ b/package.json
@@ -32,6 +32,8 @@
     "gray-matter": "^4.0.2",
     "next": "^9.5.5",
     "next-images": "^1.7.0",
+    "pg": "^8.6.0",
+    "ramda": "^0.27.1",
     "react": "^16.14.0",
     "react-device-detect": "^1.15.0",
     "react-dom": "^16.14.0",
