adds files to insert csv, row, create table to project

--- a/package.json
+++ b/package.json
@@ -25,10 +25,12 @@
     "@fortawesome/fontawesome-free": "^5.15.3",
     "bootstrap": "^4.5.3",
     "contentful": "^7.14.14",
+    "csv-parser": "^3.0.0",
     "dangerously-set-html-content": "^1.0.8",
     "date-fns": "^2.16.1",
     "discogs": "^0.4.4",
     "disconnect": "^1.2.1",
+    "fast-csv": "^4.3.6",
     "gray-matter": "^4.0.2",
     "next": "^9.5.5",
     "next-images": "^1.7.0",
