moves practice scripts into folder, fixes collection-export.ts and insert-csv-postgres.ts

--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "disconnect": "^1.2.1",
     "fast-csv": "^4.3.6",
     "gray-matter": "^4.0.2",
+    "json-2-csv": "^3.10.3",
     "next": "^9.5.5",
     "next-images": "^1.7.0",
     "pg": "^8.6.0",
