changes postgres insert to single statement and adds to tsconfig

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -26,5 +26,10 @@
 , "pages/api/messages/[id].js"  ],
   "exclude": [
     "node_modules"
-  ]
+  ],
+  "ts-node": {
+    "compilerOptions": {
+      "module": "commonjs"
+    }
+  }
 }
