--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next start"
+    "start": "next start",
+    "lint": "eslint . --ext .ts",
+    "lint-and-fix": "eslint . --ext .ts --fix"
   },
   "repository": {
     "type": "git",
@@ -25,13 +27,19 @@
     "@fortawesome/fontawesome-free": "^5.15.3",
     "bootstrap": "^4.5.3",
     "contentful": "^7.14.14",
+    "csv-parser": "^3.0.0",
     "dangerously-set-html-content": "^1.0.8",
     "date-fns": "^2.16.1",
     "discogs": "^0.4.4",
     "disconnect": "^1.2.1",
+    "dotenv": "^8.2.0",
+    "fast-csv": "^4.3.6",
     "gray-matter": "^4.0.2",
+    "json-2-csv": "^3.10.3",
     "next": "^9.5.5",
     "next-images": "^1.7.0",
+    "pg": "^8.6.0",
+    "ramda": "^0.27.1",
     "react": "^16.14.0",
     "react-device-detect": "^1.15.0",
     "react-dom": "^16.14.0",
@@ -47,6 +55,10 @@
   "devDependencies": {
     "@types/node": "^14.14.37",
     "@types/react": "^17.0.3",
+    "@typescript-eslint/eslint-plugin": "^4.23.0",
+    "@typescript-eslint/parser": "^4.23.0",
+    "eslint": "^7.26.0",
+    "ts-node": "^9.1.1",
     "typescript": "^4.2.3"
   }
 }
