--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "disconnect": "^1.2.1",
     "dotenv": "^8.2.0",
     "fast-csv": "^4.3.6",
+    "ga-gtag": "^1.1.0",
     "gray-matter": "^4.0.2",
     "json-2-csv": "^3.10.3",
     "next": "^9.5.5",
