--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "remark": "^13.0.0",
     "remark-html": "^13.0.1",
     "styled-components": "^5.2.1",
+    "ts-node": "^9.1.1",
     "use-dark-mode": "^2.3.1"
   },
   "devDependencies": {
