--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "remark-html": "^13.0.1",
     "styled-components": "^5.2.1",
     "ts-node": "^9.1.1",
+    "typescript": "^4.2.3",
     "use-dark-mode": "^2.3.1"
   },
   "devDependencies": {
