--- a/package.json
+++ b/package.json
@@ -53,8 +53,8 @@
     "remark": "^13.0.0",
     "remark-html": "^13.0.1",
     "styled-components": "^5.2.1",
-    // "ts-node": "^9.1.1",
-    // "typescript": "^4.2.3",
+    "ts-node": "^9.1.1",
+    "typescript": "^4.2.3",
     "use-dark-mode": "^2.3.1"
   },
   "devDependencies": {
@@ -64,6 +64,6 @@
     "@typescript-eslint/parser": "^4.23.0",
     "eslint": "^7.26.0",
     "ts-node": "^9.1.1",
-    "typescript": "^4.3.2"
+    "typescript": "^4.2.3"
   }
 }
